    - cif_parse_old_star:
      - the output format from the one produced by the COD::ShowStruct
        module to the one produced by the Data::Dumper module.
    - cif_split and cif_split_primitive:
      - printing extracted file names to STDOUT instead of STDERR.
    - cif_validate:
      - validation messages are now output to STDOUT instead of STDERR.
    - COD::CIF::Parser::Yapp:
      - using COD::CIF::Tags::Manage::new_datablock() to ensure the structure
        of each generated CIF data block structure.
    - COD::CIF::Tags::Manage:
      - allowing zero-length data block names in new_datablock() in order to
        make it compatible with the usage in COD::CIF::Parser::Yapp.
    - COD::UserMessage:
      - the interface of print_message(), sprint_message(), note(), warning(),
        error() and debug_note() subroutines.
  * Removed:
    - COD::ShowStruct.
    - STAR::Parser sources.
    - sdf_add_cod_data:
      - the deprecated --tmp-dir option.
    - cif_parse_old_star script.
    - cif_printout:
      - the deprecated --output-struct option.
    - cif_validate:
      - the deprecated --debug option.

cod-tools (unreleased)

  * Added:
    - COD::CIF::DDL module.
    - COD::CIF::DDL::DDL1 module.
    - COD::CIF::Tags::Manage:
      - accepting CIF format version number in new_datablock().
    - data/replacement_values/replacement_values.lst
      - several more value replacement rules.
    - cif_tags_in_list:
      - the --exclude-category-names option;
    - cif_validate:
      - a validation message pertaining to quote usage in combination with
        numeric values;
      - a uniqueness constraint check for simple and composite loop references.
  * Changed:
    - COD::CIF::Data::AtomList:
      - rewritten dump_atoms_as_cif() using standard CIF printing routines.
    - COD::CIF::Parser::Yapp:
      - replaced the COD::ShowStruct module with Data::Dumper
        for debug prints.
    - dropped test-dependency on 'mysql' command line utility.