@@ -382,7 +382,7 @@ sub symops_apply
     # Compute symmetry operator matrices
     my @symop = map { symop_from_string( $_ ) } @symop_strings;
 
-    my $sym_atoms = symop_generate_atoms( \@symop, $atoms, $atoms->[0]{'f2o'} );
+    my $sym_atoms = symop_generate_atoms( \@symop, $atoms );
 
     # Adds applied symmetry operator to the atom property hash
     my $i = 0;
