@@ -146,7 +146,6 @@ foreach my $filename (@ARGV) {
                 $atoms =
                     symop_generate_atoms( \@sym_operators,
                                           $initial_atoms,
-                                          undef,
                                           { append_atoms_mapping_to_self => 0 } );
             } else {
                 $atoms = fillcell( $initial_atoms, $symop_list );
