@@ -18,6 +18,8 @@ cod-tools (3.0.0)
       - printing extracted file names to STDOUT instead of STDERR.
     - cif_validate:
       - validation messages are now output to STDOUT instead of STDERR.
+    - COD::CIF::Data::SymmetryGenerator:
+      - removing 'f2o' parameter from the interface of symop_generate_atoms().
     - COD::CIF::Parser::Yapp:
       - using COD::CIF::Tags::Manage::new_datablock() to ensure the structure
         of each generated CIF data block structure.
